# OOP-MAI-3-semester

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
lab1/src/: lab1.h  main.cpp
src/lab1/: lab1.cpp  main.cpp
tests/: test_lab1.cpp
